styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --selection-background: 255, 255, 255;
  --selection-foreground: 0, 0, 0;
  --color-logo-red: 245 148 159;
  --color-logo-orange: 249 183 131;
  --color-logo-yellow: 242 241 149;
  --color-logo-green: 210 230 176;
  --color-logo-blue: 189 205 234;
  --color-logo-pink: 231 183 213;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
} */

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(var(--background-end-rgb));
  font-family: 'Montserrat', monospace;
}

/* ::selection {
  color: var(--selection-foreground);
  background: var(--selection-background);
} */

/* ::-webkit-scrollbar{
  width: 1.25em;
  border: inherit solid 5px;
  background-color: var(--gris);
}
::-webkit-scrollbar-track{
  background-color: var(--gris);
}
::-webkit-scrollbar-thumb{
  background-image: linear-gradient(200deg, var(--gris) calc(12.5%*1), var(--rojo) calc(12.5%*1), var(--rojo) calc(12.5%*2), var(--naranja) calc(12.5%*2), var(--naranja) calc(12.5%*3), var(--amarillo) calc(12.5%*3), var(--amarillo) calc(12.5%*4), var(--verde) calc(12.5%*4), var(--verde) calc(12.5%*5), var(--azul) calc(12.5%*5), var(--azul) calc(12.5%*6), var(--rosa) calc(12.5%*6), var(--rosa) calc(12.5%*7), var(--gris) calc(12.5%*7));
  background-size: cover;
  
} */

@media (width >= 768px) {
  .css-mobile-header {
    display: none;
  }
  .css-desktop-header {
    display: flex;
  }
}

@media (width < 768px) {
  .css-mobile-header {
    display: block;
  }
  .css-desktop-header {
    display: none;    
  }
}

.css-nav-link {
  position: relative;
  z-index: 10;
}

.css-nav-link::after {
  background-color: black;
  bottom: 0;
  content: '';
  height: 3px;
  left: 50%;
  position: absolute;
  transition: width ease .3s;
  translate: -50%;
  width: 0%;
  z-index: -1;
}

.css-nav-link:hover::after {
  animation-name: linkAnimation;
  animation-duration: 1s;
  animation-fill-mode: both;
  width: 100%;
}

.css-nav-link__text {
  display: block;
  padding: .5em;
}

.css-nav-link:hover .css-nav-link__text {
  animation-name: linkTextColorAnimation;
  animation-delay: .5s;
  animation-duration: 1s;
  animation-fill-mode: both;
  color: inherit;
}

.css-form-link {
  transition: color .3s;
}

.css-form-link:hover {
  color: black;
}

.css-form-link::after {
  content: '';
  height: 100%;
  right: 0;
  position: absolute;
  top: 0;
  transition: width ease .3s;
  width: 0%;
  z-index: -1;
}

.css-form-link:hover::after {
  width: 100%;
  left: 0;
}

@keyframes linkAnimation {
  0% {
    width: 0%;
  }

  50% {
    width: 100%;
    height: 3px;
  }

  100% {
    height: 100%;
  }
}

@keyframes linkTextColorAnimation {
  0% {
    color: inherit;
  }

  100% {
    color: black;
  }
}

.css-searcher input:focus~.css-searcher-separator {
  animation-name: fullWidth;
  animation-duration: 1s;
  animation-fill-mode: both;
  background: rgb(226, 232, 240);
  bottom: 0;
  content: '';
  height: 2.5px;
  left: 0;
  position: absolute;
  width: 0%;
  transition: width ease .3s;
}

.css-searcher button[type="submit"]:hover+.css-searcher-separator {
  filter: brightness(95%)
}

@keyframes fullWidth {
  0% {
    width: 0%;
  }

  100% {
    width: 100%;
  }
}

